Finish navbar functionality and fix whitespace

--- a/client/main.css
+++ b/client/main.css
@@ -1,74 +1,76 @@
 /* Universal styles */
 * {
-	font-family: Roboto, Helvetica, sans-serif;
+  font-family: Roboto, Helvetica, sans-serif;
 }
 
 html, body, .page-wrapper {
-	margin: 0;
-	padding: 0;
-	min-height: 100vh;
-	overflow-x: hidden;
-	overflow-y: auto;
-	color: #505050;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  color: #505050;
 }
 h1, h2, h3, h4, h5, h6 {
-	padding: 0;
-	margin: 0;
-	color: #303030;
+  padding: 0;
+  margin: 0;
+  color: #303030;
 }
-
+.page-wrapper {
+  animation: 0.25s fadeIn;
+}
 .header-wrapper {
-	position: fixed;
-	background-size: cover;
-	height: 60vh;
-	left: 0;
-	right: 0;
+  position: fixed;
+  background-size: cover;
+  height: 60vh;
+  left: 0;
+  right: 0;
 }
 .header-text {
-	min-width: 50%;
-	max-width: 80%;
-	margin: auto;
-	z-index: 2000;
+  min-width: 50%;
+  max-width: 80%;
+  margin: auto;
+  z-index: 2000;
 }
 .header-text * {
-	color: white;
+  color: white;
 }
 .header-wrapper h1 {
-	font-size: 3.5em;
-	width: 100%;
-	line-height: 1;
+  font-size: 3.5em;
+  width: 100%;
+  line-height: 1;
 }
 .header-wrapper p {
-	font-family: "Roboto Slab", serif;
-	font-weight: 300;
-	font-size: 2em;
-	line-height: 1;
-	margin-top: 2vh;
+  font-family: "Roboto Slab", serif;
+  font-weight: 300;
+  font-size: 2em;
+  line-height: 1;
+  margin-top: 2vh;
 }
 
 .white-text {
-	color: white;
+  color: white;
 }
 
 .container {
-	margin: auto;
-	width: 70%;
+  margin: auto;
+  width: 70%;
 }
 .content-wrapper {
-	width: 95%;
-	margin: auto;
-	padding-bottom: 3vh;
-	position: relative;
-	z-index: 200;
-	pointer-events: none;
+  width: 95%;
+  margin: auto;
+  padding-bottom: 3vh;
+  position: relative;
+  z-index: 200;
+  pointer-events: none;
 }
 .content-wrapper * {
     pointer-events: all;
 }
 
 .center-align {
-	text-align: center;
-	width: 100%;
+  text-align: center;
+  width: 100%;
 }
 
 .valign-wrapper {
@@ -85,166 +87,176 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .horizontal-divider {
-	width: 100%;
-	margin-top: 5vh;
-	margin-bottom: 5vh;
-	height: 2px;
-	background-color: #e0e0e0;
-	z-index: 1000;
+  width: 100%;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+  height: 2px;
+  background-color: #e0e0e0;
+  z-index: 1000;
 }
 .content-wrapper #cover {
-	position: absolute;
-	top: 15vh;
-	left: -5vh;
-	right: -5vh;
-	bottom: 0;
-	background: white;
-	z-index: -1;
+  position: absolute;
+  top: 15vh;
+  left: -5vh;
+  right: -5vh;
+  bottom: 0;
+  background: white;
+  z-index: -1;
 }
 img.bw {
-	-webkit-filter: grayscale(100%);
-	filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
 }
 /* Navbar styles */
 #navbar-primary li {
-	transition: background 0.3s ease;
+  transition: background 0.3s ease;
 }
 #navbar-primary li:hover, #navbar-primary li.active {
-	background: #eeeeee;
+  background: #eeeeee;
 }
 /* Homepage styles */
 #home-wrapper #section-splash {
-	background-image: url(/img/assets/dallas.png);
-	position: fixed;
-	-webkit-filter: hue-rotate(315deg);
-	height: 100vh;
-	width: 100vw;
-	background-size: cover;
-	z-index: -1;
+  background-image: url(/img/assets/dallas.png);
+  position: fixed;
+  -webkit-filter: hue-rotate(315deg);
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+  z-index: -1;
 }
 
 #home-wrapper #subscribe-panel {
-	margin-top: 20vh;
-	background: white;
-	border-radius: 2vh;
-	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
-	padding: 2vh;
+  margin-top: 20vh;
+  background: white;
+  border-radius: 2vh;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
+  padding: 2vh;
 }
 
 .section-header {
-	text-align: center;
-	width: 100%;
-	font-weight: 700;
-	font-size: 2.5rem;
-	padding-top: 5vh;
+  text-align: center;
+  width: 100%;
+  font-weight: 700;
+  font-size: 2.5rem;
+  padding-top: 5vh;
 }
 .content-section {
-	background: white;
-	z-index: 1;
+  background: white;
+  z-index: 1;
 }
 #section-what-we-do {
-	margin-top: 100vh;
+  margin-top: 100vh;
 }
 #section-what-we-do .row {
-	padding: 10vh;
-	padding-top: 2vh;
+  padding: 10vh;
+  padding-top: 2vh;
 }
 .what-we-do-panel {
-	padding: 15px;
-	text-align: center;
+  padding: 15px;
+  text-align: center;
 }
 .what-we-do-panel h3 {
-	margin-top: 2vh;
-	color: #303030;
+  margin-top: 2vh;
+  color: #303030;
 }
 .what-we-do-panel p {
-	margin: 0;
-	font-weight: 300;
+  margin: 0;
+  font-weight: 300;
 }
 .what-we-do-panel img {
-	width: 100%;
+  width: 100%;
 }
 .what-we-do-panel .img-wrapper {
-	width: 100%;
-	height: 21vh;
-	overflow: hidden;
+  width: 100%;
+  height: 21vh;
+  overflow: hidden;
 }
 
 #subscribe-banner {
-	width: 100vw;
-	padding-top: 7vh;
-	padding-bottom: 7vh;
-	background: #2196f3;
+  width: 100vw;
+  padding-top: 7vh;
+  padding-bottom: 7vh;
+  background: #2196f3;
 }
 
 #section-partners .row {
-	padding: 10vh;
-	padding-top: 2vh;
+  padding: 10vh;
+  padding-top: 2vh;
 }
 #section-partners .img-wrapper {
-	padding: 15px;
+  padding: 15px;
 }
 #section-partners img {
-	width: 100%;
-	height: auto;
+  width: 100%;
+  height: auto;
 }
 
 /* Events page styles */
 #events-wrapper .event-card-wrapper {
-	padding: 1.5vh;
-	z-index: 201;
+  padding: 1.5vh;
+  z-index: 201;
 }
 #events-wrapper .event-card-wrapper img {
-	height: 25vh;
-	width: auto;
-	object-fit: cover;
-	object-position: center;
+  height: 25vh;
+  width: auto;
+  object-fit: cover;
+  object-position: center;
 }
 #events-wrapper .content-wrapper {
-	margin-top: 45vh;
-	min-height: 55vh;
+  margin-top: 45vh;
+  min-height: 55vh;
 }
 #events-wrapper h2 {
-	z-index: 1000;
-	font-size: 2em;
-	font-weight: 700;
-	padding-left: 1vh;
+  z-index: 1000;
+  font-size: 2em;
+  font-weight: 700;
+  padding-left: 1vh;
 }
 
 /* Chapters page styles */
 #chapters-map {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 #chapters-wrapper .header-text {
-	pointer-events: none;
+  pointer-events: none;
 }
 #chapters-wrapper .content-wrapper {
-	margin-top: 50vh;
-	min-height: 50vh;
+  margin-top: 50vh;
+  min-height: 50vh;
 }
 #chapters-wrapper #cover {
-	top: 10vh;
+  top: 10vh;
 }
 #chapters-wrapper .chapter-card-wrapper {
-	padding: 1.5vh;
-	z-index: 201;
+  padding: 1.5vh;
+  z-index: 201;
 }
 #chapters-wrapper .chapter-card-wrapper > div {
-	height: 18vh;
-	position: relative;
+  height: 18vh;
+  position: relative;
 }
 @media (max-width: 600px) {
-	#chapters-wrapper .chapter-card-wrapper > div {
-		height: 22vh;
-	}
+  #chapters-wrapper .chapter-card-wrapper > div {
+    height: 22vh;
+  }
 }
 #chapters-wrapper .chapter-card-wrapper .img-wrapper {
-	height: 20vh;
-	width: 100%;
-	background-size: cover;
+  height: 20vh;
+  width: 100%;
+  background-size: cover;
 }
 
+/* Animations */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
